# rusty-monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/system/: cpu.rs  disks.rs  gpu.rs  mod.rs  network.rs  notifications.rs  operating_system.rs  process_kill.rs  processes.rs  ram.rs  tray.rs
src/api/: cpu.ts  disks.ts  gpu.ts  network.ts  notifications.ts  operating_system.ts  process_kill.ts  processes.ts  ram.ts
src/components/: Cpu.tsx  Disks.tsx  Gpu.tsx  Network.tsx  OS.tsx  Processes.tsx  Ram.tsx
src/utils/: formatBytes.ts  formatClocks.ts  formatInternet.ts  formatTime.ts  useProcessSearch.ts
